--- a/index.html
+++ b/index.html
@@ -1861,56 +1861,59 @@
         document.getElementById('hof-popup-overlay').style.display = 'none';
     }
 
-    function submitScore() {
-        const initialInput = document.getElementById('hof-initial');
-        const initial = initialInput.value;
-        const submitBtn = document.getElementById('hof-submit-btn');
-        const messageEl = document.getElementById('hof-message');
+// *** 수정된 JavaScript 함수 ***
 
-        if (!/^[A-Z]{3}$/.test(initial)) {
-            messageEl.textContent = '이니셜은 영어 대문자 3글자로 입력해주세요.';
-            messageEl.style.color = 'red';
-            return;
-        }
+function submitScore() {
+    const initialInput = document.getElementById('hof-initial');
+    const initial = initialInput.value;
+    const submitBtn = document.getElementById('hof-submit-btn');
+    const messageEl = document.getElementById('hof-message');
 
-        submitBtn.disabled = true;
-        messageEl.textContent = '등록 중...';
-        messageEl.style.color = '#333';
-
-        const data = {
-            initial: initial,
-            problems: totalProblems,
-            accuracy: finalAccuracyValue,
-            difficulty: selectedDifficulty
-        };
-
-        fetch(webAppUrl, {
-            method: 'POST',
-            cache: 'no-cache',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(data)
-        })
-        .then(response => response.json())
-        .then(result => {
-            if (result.result === 'success') {
-                hasSubmittedScore = true;
-                messageEl.textContent = '성공적으로 등록되었습니다!';
-                messageEl.style.color = 'green';
-                document.querySelector('.hof-input-group').style.display = 'none';
-                setTimeout(showHofPopup, 1500);
-            } else {
-                throw new Error(result.message || '알 수 없는 오류');
-            }
-        })
-        .catch(error => {
-            messageEl.textContent = '등록에 실패했습니다. 다시 시도해주세요.';
-            messageEl.style.color = 'red';
-            submitBtn.disabled = false;
-            console.error('Error submitting score:', error);
-        });
+    if (!/^[A-Z]{3}$/.test(initial)) {
+        messageEl.textContent = '이니셜은 영어 대문자 3글자로 입력해주세요.';
+        messageEl.style.color = 'red';
+        return;
     }
+
+    submitBtn.disabled = true;
+    messageEl.textContent = '등록 중...';
+    messageEl.style.color = '#333';
+
+    const data = {
+        initial: initial,
+        problems: totalProblems,
+        accuracy: finalAccuracyValue,
+        difficulty: selectedDifficulty,
+        type: selectedType // <-- 이 줄이 추가되었습니다!
+    };
+
+    fetch(webAppUrl, {
+        method: 'POST',
+        cache: 'no-cache',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(data)
+    })
+    .then(response => response.json())
+    .then(result => {
+        if (result.result === 'success') {
+            hasSubmittedScore = true;
+            messageEl.textContent = '성공적으로 등록되었습니다!';
+            messageEl.style.color = 'green';
+            document.querySelector('.hof-input-group').style.display = 'none';
+            setTimeout(showHofPopup, 1500);
+        } else {
+            throw new Error(result.message || '알 수 없는 오류');
+        }
+    })
+    .catch(error => {
+        messageEl.textContent = '등록에 실패했습니다. 다시 시도해주세요.';
+        messageEl.style.color = 'red';
+        submitBtn.disabled = false;
+        console.error('Error submitting score:', error);
+    });
+}
 
 
     window.onload = () => {
