--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             if (selectedDifficulty == 2) {
                 isSlantedAxis = Math.random() < 0.5;
                 if (isSlantedAxis) {
-                    nVertices = getRandomInt(3, 4);
+                    nVertices = 4;
                     minCoord = 3;
                     maxCoord = 17;
                     axisDirection = 'slanted';
