--- a/index.html
+++ b/index.html
@@ -1098,10 +1098,11 @@ button:hover {
                 }
             }
 
-        } else if (type === 'point') { 
-            const numPoints = (selectedDifficulty == 1) ? getRandomInt(3, 4) : getRandomInt(5, 6);
-            let initialPoints = [];
-            const MAX_POINT_GEN_ATTEMPTS = 50;
+} else if (type === 'point') {
+    // *** 이 부분을 수정했습니다! ***
+    const numPoints = (selectedDifficulty == 1) ? 4 : getRandomInt(5, 6);
+    let initialPoints = [];
+    const MAX_POINT_GEN_ATTEMPTS = 50;
             let currentAttempts = 0;
 
             const isHorizontalAxis = Math.random() < 0.5;
