--- a/index.html
+++ b/index.html
@@ -416,8 +416,18 @@ button:hover {
     font-size: 14px;
     z-index: 20;
 }
-#qr-popup-overlay { background-color: rgba(255, 255, 255, 0.4); }
-.popup-qr img { max-width: 200px; height: auto; }
+#qr-popup-overlay { 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8); /* 흰색, 80% 불투명 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 200;
+}
 
 #hof-popup-overlay { background-color: rgba(0, 0, 0, 0.2); }
 .hof-input-group { margin: 20px 0; }
