--- a/index.html
+++ b/index.html
@@ -1909,7 +1909,7 @@ function submitScore() {
         if (result.result === 'success') {
             hasSubmittedScore = true;
             messageEl.textContent = '성공적으로 등록되었습니다!';
-            messageEl.style.color = 'green';
+            messageEl.style.color = '#4B8134';
             document.querySelector('.hof-input-group').style.display = 'none';
             setTimeout(showHofPopup, 1500);
         } else {
