--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ button:hover {
     color: white;
 }
 .primary-btn:hover {
-    background-color: #218838;
+    background-color: #4B8134;
 }
 .secondary-btn {
     background-color: #e9e9e9;
