--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ button:hover {
     transform: translateY(-1px);
 }
 .primary-btn {
-    background-color: #28a745;
+    background-color: #4b8134;
     color: white;
 }
 .primary-btn:hover {
