--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ button:hover {
     transform: translateY(-1px);
 }
 .primary-btn {
-    background-color: #4b8134;
+    background-color: #a0c179;
     color: white;
 }
 .primary-btn:hover {
-    background-color: #4B8134;
+    background-color: #a0c179;
 }
 .secondary-btn {
     background-color: #e9e9e9;
