--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ button:hover {
     color: white;
 }
 .primary-btn:hover {
-    background-color: #a0c179;
+    background-color: #8cb24b;
 }
 .secondary-btn {
     background-color: #e9e9e9;
