--- a/index.html
+++ b/index.html
@@ -607,6 +607,7 @@
             </div>
         </div>
     </div>
+    <script>
     // *** Cloudflare Worker URL을 여기에 붙여넣으세요! ***
 const webAppUrl = 'https://soft-wood-cf8e.bbglara.workers.dev/';
 
