--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>선대칭/점대칭도형 완전 정복</title>
     <meta property="og:title" content="선대칭/점대칭도형 완전 정복">
     <meta property="og:description" content="선대칭, 점대칭도형 문제를 연습해보세요!">
-    <meta property="og:image" content="https://3arch2nd.github.io/symmetry/preview.png">
+    <meta property="og:image" content="https://3arch2nd.github.io/symmetry/thumb.png">
     <meta property="og:url" content="https://3arch2nd.github.io/symmetry/">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
