--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@ button:hover {
     background-color: #d9d9d9;
 }
 #clear-canvas-btn {
-    background-color: #ea9999;
+    background-color: #e06666;
     color: white;
 }
 #clear-canvas-btn:hover {
-    background-color: #e06666;
+    background-color: #cc4125;
 }
 .mode-btn-active {
     background-color: #ffc107;
