--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ button:hover {
             <span class="desktop-title">선대칭/점대칭도형 완전 정복</span>
             <span class="mobile-title">선대칭/점대칭도형<br>완전 정복</span>
         </h1>
-        <h2>플레이할 모드를 선택하세요.</h2>
+        <h2>모드를 선택하세요.</h2>
         <div class="mode-buttons">
             <button id="classic-mode-btn" class="primary-btn">🎓 클래식 모드</button>
             <button id="time-attack-mode-btn" class="primary-btn">⏱️ 타임어택 모드</button>
@@ -618,7 +618,7 @@ button:hover {
     </div>
     
     <div id="setup-page">
-        <button id="back-to-mode-select-btn" class="home-button" style="position: absolute; top: 20px; left: 20px;">↩️ 모드 선택으로</button>
+        <button id="back-to-mode-select-btn" class="home-button" style="position: absolute; top: 20px; left: 20px;">모드 선택으로</button>
         <h1>
             <span class="desktop-title">선대칭/점대칭도형 완전 정복</span>
             <span class="mobile-title">선대칭/점대칭도형<br>완전 정복</span>
