--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ button:hover {
                     <span class="progress-bar"></span>
                     <span class="button-text">정답 확인하기</span>
                 </button>
-                <small class="check-answer-guide">꾹 누르고 있으면 정답이 확인됩니다!</small>
+                <small class="check-answer-guide">꾹 누르고 있으면 채점됩니다!</small>
             </div>
             <button id="next-problem-btn" class="primary-btn" style="display: none;">다음 문제 도전하기</button>
         </div>
