--- a/index.html
+++ b/index.html
@@ -669,13 +669,13 @@ button:hover {
             <div class="mode-option">
                 <button id="classic-mode-btn">🎓 클래식 모드</button>
                 <small class="mode-description">
-                    무작위로 생성되는 새로운 문제를<br>원하는 만큼 연습하세요!
+                    무작위로 생성되는 문제를<br>원하는 만큼 연습하세요!
                 </small>
             </div>
             <div class="mode-option">
                 <button id="time-attack-mode-btn">⏱️ 타임어택 모드</button>
                 <small class="mode-description">
-                    정해진 시간 동안<br>빠르고 정확하게 문제를 풀어보세요!
+                    정해진 시간 동안<br>빠르고 정확하게 풀어보세요!
                 </small>
             </div>
         </div>
@@ -786,7 +786,7 @@ button:hover {
         </div>
         <div>
             <button id="restart-btn" class="primary-btn">새로운 학습 시작하기</button>
-            <button id="show-hof-btn" class="secondary-btn">🏆 명예의 전당 등록하기</button>
+            <button id="show-hof-btn" class="secondary-btn">명예의 전당 등록하기</button>
         </div>
     </div>
 </div>
@@ -815,7 +815,7 @@ button:hover {
 <div id="hof-popup-overlay" class="popup-overlay" style="display: none;">
     <div class="popup-hof popup-box">
         <button class="close-btn" onclick="closeHofPopup()">&times;</button>
-        <h3>🏆 명예의 전당</h3>
+        <h3>🏆 명예의 전당🏆</h3>
         <div class="hof-input-group">
             <input type="text" id="hof-initial" placeholder="AAA" maxlength="3" oninput="this.value = this.value.toUpperCase().replace(/[^A-Z]/g, '')">
             <button id="hof-submit-btn" class="primary-btn">등록</button>
