--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@ button:hover {
         <h2>모드를 선택하세요.</h2>
         <div class="mode-buttons">
             <div class="mode-option">
-                <button id="classic-mode-btn">📝 클래식 모드</button>
+                <button id="classic-mode-btn">🎓 클래식 모드</button>
                 <small class="mode-description">
                     무작위로 생성되는 문제를<br>원하는 만큼 연습하세요!
                 </small>
