--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@ button:hover {
             <div class="mode-option">
                 <button id="time-attack-mode-btn">⏱️ 타임어택 <span>모드</span></button>
                 <small class="mode-description">
-                    정해진 시간 동안<br>빠르고 정확하게 풀어보세요!
+                    정해진 시간 동안<br>빠르고 정확하게!
                 </small>
             </div>
         </div>
