--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@ button:hover {
     </div>
 </div>
 <div class="footer">
-    휴르쌤
+    Copyright © 2025 휴르쌤. All rights reserved.
 </div>
 
 <div id="result-popup-overlay" class="popup-overlay" style="display: none;">
